Button icon 'icon-align-top' style correction (#15140).

--- a/WebContent/VAADIN/themes/valo/components/_button.scss
+++ b/WebContent/VAADIN/themes/valo/components/_button.scss
@@ -444,6 +444,8 @@
 
   .v-icon {
     display: block;
+    margin-left: auto;
+    margin-right: auto;
 
     + span:not(:empty) {
       margin-top: ceil($v-unit-size/6);
